Tests/ValidTests/Test4_With_macros/test.as
HEY: .data 5
not r1
mcro GAL
mov r1, r2
inc r5
List: jmp &HEY
sub r5, r4
mcroend
GAL
GAL