Tests/InvalidTests/Test4 _use_safe_word_in_macro/test.as
HEY: .data 5
not r1
mcro mov
mov r1, r2
inc r5
List: jmp &HEY
sub r5, r4
mcroend
mov
mov